--- a/index.html
+++ b/index.html
@@ -116,14 +116,46 @@
           </div>
         </section>
         <!-- super client section start -->
-        <section class="my-24 bg-gradient-to-l from-[#ff0000a8] to-[#ff8838b4] rounded-lg px-20">
-          <div>
-            <h3>Meet Our Super <br>Clients</h3>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <button class="btn text-gradient-to-l from-[#ff0000a8] to-[#ff8838b4]">Button</button>
+        <section class="my-24 flex flex-col lg:flex-row justify-between items-center gap-20 lg:gap-8 lg:px-16 px-8 py-24 bg-gradient-to-l from-[#ff0000a8] to-[#ff8838b4] rounded-lg px-20">
+          <div class="max-w-[700px]">
+            <h3 class="lg:text-5xl text-3xl text-white font-extrabold lg:leading-[60px] mb-5">Meet Our Super <br>Clients</h3>
+            <p class="text-[#f4f4f4] mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="btn text-lg px-7 hover:bg-[#f4f4f4]">Show All</button>
           </div>
-          <div>
-
+          <div class="relative space-y-12">
+            <div class="opacity-40 z-10">
+              <div class="relative bg-white rounded-lg px-14 py-10 max-w-[450px] h-fit">
+                <img class="border-4 rounded-full border-white absolute -left-6 -top-6" src="images/client.png">
+                <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="text-[#1c1c1c] font-bold">Ilham Yuda</h4>
+                <p>Businessman</p>
+                <div class="flex justify-end"> 
+                  <img src="images/circles.png">
+                </div>
+              </div>
+            </div>
+            <div class="absolute lg:-left-40 top-24 z-20">
+              <div class="relative bg-white rounded-lg px-14 py-10 max-w-[450px] h-fit">
+                <img class="border-4 rounded-full border-white absolute -left-6 -top-6" src="images/client.png">
+                <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="text-[#1c1c1c] font-bold">Ilham Yuda</h4>
+                <p>Businessman</p>
+                <div class="flex justify-end"> 
+                  <img src="images/circles.png">
+                </div>
+              </div>
+            </div>
+            <div class="opacity-40 z-10">
+              <div class="relative bg-white rounded-lg px-14 py-10 max-w-[450px] h-fit">
+                <img class="border-4 rounded-full border-white absolute -left-6 -top-6" src="images/client.png">
+                <p class="text-[#777] mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <h4 class="text-[#1c1c1c] font-bold">Ilham Yuda</h4>
+                <p>Businessman</p>
+                <div class="flex justify-end"> 
+                  <img src="images/circles.png">
+                </div>
+              </div>
+            </div>
           </div>
         </section>
     </main>
