news section completed

--- a/index.html
+++ b/index.html
@@ -158,6 +158,34 @@
             </div>
           </div>
         </section>
+        <!-- News and Event section started -->
+        <section class="lg:px-10 px-5 mb-20">
+            <h1 class=" text-center lg:text-5xl text-3xl text-[#1c1c1c] mb-5 font-extrabold ">News & Events</h1>
+            <p class=" text-center lg:mb-12 mb-8 text-[#777] max-w-[850px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            <div class="flex gap-10 justify-center items-center lg:flex-row flex-col">
+                <div class="md:p-7 p-5 border-2 border-[#e2e2e2] rounded-md">
+                    <img class="w-[100%]" src="images/news-1.png"> 
+                    <p class="text-[#777] mt-5 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+                    <p class="mb-3 text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-semibold">Learn More</button>
+                </div>
+                <div class="md:p-7 p-5 border-2 border-[#e2e2e2] rounded-md">
+                    <img class="w-[100%]" src="images/news-2.png"> 
+                    <p class="text-[#777] mt-5 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+                    <p class="mb-3 text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-semibold">Learn More</button>
+                </div>
+                <div class="md:p-7 p-5 border-2 border-[#e2e2e2] rounded-md">
+                    <img class="w-[100%]" src="images/news-3.png"> 
+                    <p class="text-[#777] mt-5 mb-3">Feb 05, 2027</p>
+                    <h3 class="text-2xl font-extrabold">Collecting 8 points for discount</h3>
+                    <p class="mb-3 text-[#777]">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-semibold">Learn More</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
