tea house website 80% completed nearly

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 </head>
 <body class="font-manrope">
     <header class="container mx-auto">
-      <div class="hero">
-        <div class="hero-content flex-col lg:flex-row">
+      <div class="mt-20 lg:px-8 px-6">
+        <div class="flex flex-col lg:flex-row gap-10 justify-between">
           <div>
-            <h1 class="text-7xl leading-relaxed font-extrabold">It's good <br>tea time at The <br>Tea House</h1>
+            <h1 class="lg:text-7xl text-4xl lg:leading-relaxed font-extrabold">It's good <br>tea time at The <br>Tea House</h1>
             <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
             <button class="btn btn-primary">Explore More</button>
           </div>
-          <div>
-            <img src="images/banner.png" class="max-w-sm rounded-lg" />
+          <div class="max-w-[600px] ">
+            <img src="images/banner.png" class="w-[100%] rounded-lg" />
             <!-- rating badge here  -->
-            <div class="bottom-[50px] relative  bg-[#ffffff] flex items-center w-[260px] gap-4 shadow-xl px-7 py-5 rounded-md">
+            <div class="bottom-[90px] left-32 relative  bg-[#ffffff] flex items-center w-[260px] gap-4 shadow-xl px-7 py-5 rounded-md">
               <img src="images/star5.svg">
               <div>
                 <h3 class="text-3xl font-extrabold">5.00</h3>
